# tribe

./: .gitignore  .gitmodules  README.md  ajcore.20160620.221645.230.txt  ajcore.20160819.164819.233.txt  ajcore.20160822.151650.648.txt  build.gradle  gradle.properties  settings.gradle  tribestore.jks
AdapterDelegates/: build.gradle  proguard-rules.pro
ViewNavigator/: build.gradle
app/: build 2.gradle  build.gradle  fabric.properties  generate_strings  google-services.json  local.properties  proguard-corona.pro  proguard-gson.pro  proguard-retrofit.pro  proguard-rules.pro  proguard-rxjava.pro
app/gradle/wrapper/: gradle-wrapper.properties
app/src/debug/: google-services.json
app/src/debug/res/xml/: firebase_default_config.xml
app/src/main/: AndroidManifest.xml  google-services.json
app/src/main/assets/aliens-attack/: aliens.lua  background.lua  bonus.lua  emitter.lua  level.lua  main.lua  messenger.lua  model.lua  sounds.lua  strings.lua  texts.lua  vibrator.lua
app/src/main/assets/battleroyale/: battle.lua  build.settings  colors.lua  config.lua  emitter.lua  gamemaster.lua  inspect.lua  main-old.lua  main.lua  mock.lua  perspective.lua  sounds.lua  strings.lua  texts.lua  users.lua
app/src/main/assets/lab-aliens-attack-corona/: aliens.lua  background.lua  bonus.lua  config.lua  level.lua  license.ccdata  main.lua  model.lua  sounds.lua  texts.lua
app/src/main/res/anim/: activity_in_from_right.xml  activity_in_scale.xml  activity_out_scale_down.xml  activity_out_to_left.xml  activity_out_to_right.xml  alerter_slide_in_from_top.xml  alerter_slide_in_to_down.xml  alerter_slide_out_to_top.xml  base_dialog_fragment_enter_animation.xml  base_dialog_fragment_exit_animation.xml  buzz_live.xml  dice_anim1.xml  dice_anim2.xml  dice_anim3.xml  dice_anim4.xml  filter_view_enter_animation.xml  get_notified_dialog_fragment_animation.xml  hand_anim.xml  in_from_left.xml  in_from_right.xml  interpolator_scaling_screenshot.xml  interpolator_slight_overshoot.xml  jiggle.xml  my_overshoot.xml  my_overshoot_strong.xml  notif_container_enter_animation.xml  notif_container_exit_animation.xml  notif_slide_in_from_top.xml  out_from_left.xml  out_from_right.xml  rotate90.xml  rotate_hourglass_emoji.xml  rotate_poke_emoji.xml  scale_appear.xml  scale_appear_popup.xml  scale_button_call.xml  scale_disappear.xml  scale_letters.xml  scale_sound.xml  scale_sound_small.xml  (+18 more)
app/src/main/res/color/: color_new_chat_action_selector.xml  switch_friendship_color.xml
app/src/main/res/drawable-nodpi/: bg_gradient_camera_top.xml  drawable_pull_to_refresh_wave_repeat.xml  progress_circular_countdown.xml  progress_circular_download.xml  progress_circular_synchro.xml  (+8 more)
app/src/release/: google-services.json
buildsystem/: debug.keystore  dependencies.gradle
gradle/wrapper/: gradle-wrapper.properties
tokenlib/: build.gradle
tribelivesdk/: build.gradle  proguard-rules.pro
tribelivesdk/src/main/: AndroidManifest.xml
tribelivesdk/src/main/cpp/: CMakeLists.txt  hello-jni.c  tribelibopencv.cpp  tribelibyuv.cpp
tribelivesdk/src/main/rs/: channel.rs  image_translate_3d.rs  main.fs  rgb2yuv.rs  uvencode.rs
ulsee/: build.gradle  proguard-rules.pro
ulseefacear/: build.gradle
(+2568 files in other folders)
